# linear-relational

./: .buildinfo  .gitignore  CHANGELOG.md  CITATION.cff  README.md  about.html  advanced_usage.html  basic_usage.html  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js  setup.cfg
.doctrees/: about.doctree  advanced_usage.doctree  basic_usage.doctree  environment.pickle  index.doctree
.doctrees/api/: causal_editor.doctree  concept.doctree  concept_matcher.doctree  lre.doctree  trainer.doctree
.github/workflows/: ci.yaml
_modules/: index.html
_modules/linear_relational/: CausalEditor.html  Concept.html  ConceptMatcher.html  Lre.html  Prompt.html
_sources/: advanced_usage.rst.txt  index.rst.txt
_sources/api/: causal_editor.rst.txt  concept.rst.txt  concept_matcher.rst.txt  lre.rst.txt  trainer.rst.txt
api/: causal_editor.html  concept.html  concept_matcher.html  lre.html  trainer.html
docs/: about.rst  advanced_usage.rst  basic_usage.rst  conf.py  index.rst  usage.rst
docs/api/: trainer.rst
linear_relational/: CausalEditor.py  Concept.py  ConceptMatcher.py  Lre.py  Prompt.py  PromptValidator.py  __init__.py
linear_relational/lib/: TraceLayer.py  TraceLayerDict.py  balance_grouped_items.py  constants.py  extract_token_activations.py  layer_matching.py  logger.py  token_utils.py  torch_utils.py  util.py  verify_answers_match_expected.py
linear_relational/training/: Trainer.py  train_lre.py
tests/: conftest.py  helpers.py  test_CausalEditor.py  test_ConceptMatcher.py  test_Lre.py  test_PromptValidator.py
tests/lib/: test_balance_grouped_items.py  test_layer_matching.py  test_token_utils.py  test_torch_utils.py  test_util.py  (+1 more)
(+3 files in other folders)
