[tool.poetry]
name = "linear-relational"
version = "0.1.1"
description = "A Python library for working with Linear Relational Embeddings (LREs) and Linear Relational Concepts (LRCs) for LLMs"
authors = ["David Chanin <chanindav@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
transformers = "^4.35.2"
tqdm = ">=4.0.0"
dataclasses-json = "^0.6.2"


[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
flake8 = "^6.1.0"
mypy = "^1.7.0"
isort = "^5.12.0"
pytest = "^7.4.3"
torch = "^2.1.1"
sentencepiece = "^0.1.99"
protobuf = "^4.25.1"
furo = "^2023.9.10"
pygments = "^2.17.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"


[tool.semantic_release]
version_variables = [
    "linear_relational/__init__.py:__version__",
    "pyproject.toml:version",
]
branch = "main"
build_command = "pip install poetry && poetry build"
